# MuxyLuxy

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ansible/: ansible.cfg
ansible/roles/base/tasks/: main.yml
ansible/roles/motd/tasks/: main.yml
docs/: architecture.md  local-development.md  security.md  testing.md  tradeoffs.md
examples/: add-target.sh  get-logs.sh  get-status.sh  list-roles.sh  list-targets.sh  login.sh
prometheus/: prometheus.yml
scripts/: bootstrap.sh  check-ansible-ping.sh  check-ssh.sh  e2e-run-role.sh  lint.sh  reset.sh  seed-demo-data.sh  smoke-test.sh  test.sh  wait-for-api.sh  wait-for-targets.sh
service/: Dockerfile  entrypoint.sh  pyproject.toml
service/alembic/: env.py
service/alembic/versions/: 20250515_0001_initial_schema.py  20260518_0002_unique_target_names.py  20260518_0003_unique_role_names.py
service/ansible_roller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
service/app/: auth.py  config.py  database.py  main.py  models.py
service/app/ansible/: inventory.py  playbook.py  runner.py  validation.py
service/app/api/: login.py  logs.py  roles.py  runs.py  targets.py
service/app/metrics/: prometheus.py
service/tests/: test_auth.py  test_health.py  test_inventory.py  test_logs.py  test_metrics.py  test_playbook.py  test_roles.py  test_runs.py  test_targets.py
targets/: Dockerfile  entrypoint.sh  sshd_config
