[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-roller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "prometheus-client",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "pydantic-settings",
  "python-jose[cryptography]",
  "alembic",
  "ansible-core",
  "ansible-runner",
  "pytest",
  "httpx",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
